@@ -21,6 +21,8 @@ Version 1.3.6+svn:
     * The random starting time of day setting is will now be remembered if
       "Use map settings" is used.
     * The "Soul Shooter" is now renamed to "Banebow".
+    * The players in the selected game in the server lobby are highlighted now.
+    * Observers can now chat as a "team" (without disturbing the players).
 
   * User interface
     * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
