@@ -34,6 +34,7 @@ Version 1.3.6+svn:
      the selected game (bug #7471)
    * multiplayer lobby: tab completion works for all player names now,
      not only for those which are not in a game (bug #9350)
+   * enable "teamchat" for observers
  * graphics
    * fixed a glitch with the undo of recruit or recall on high places.
    * Improve rendering of "black stripes": don't hide footsteps and fog
